--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "陕西经济数据展示平台",
+  "name": "shaanxi-economy-dashboard",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "recharts": "2.15.0",
-    "framer-motion": "11.11.17"
+    "framer-motion": "^12.0.0",
+    "recharts": "2.15.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
